src/objects/loan__K1_Segment__c.object
<CustomObject>
    <description>Metro 2 K1 Segment Object</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>K1 Segments</relationshipLabel>
        <relationshipName>K1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>K1 Segments</relationshipLabel>
        <relationshipName>K1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Creditor_Classification__c</fullName>
        <label>Creditor Classification</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Original_Creditor_Name__c</fullName>
        <label>Original Creditor Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>K1 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K1 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>